<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 유저 정보 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/my_eats_frag_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/my_eats_frag_user_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_below="@id/my_eats_frag_user_name"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/my_eats_frag_discount_promotion_iv"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/ic_setting_coupon_img"/>

        <!-- 배달 주소 관리 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_setting_delivery_img"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/my_eats_tv_manage_address"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <!-- 즐겨찾기 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_setting_favorite"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/my_eats_tv_favorite"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <!-- 할인쿠폰 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_setting_coupon"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/my_eats_tv_coupon"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <!-- 결제관리 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_setting_payment"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/my_eats_tv_manage_payment"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <!-- 배달파트너 모집 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_setting_partner"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/my_eats_tv_delivery_partner"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"/>
            
            <ImageView
                android:layout_width="40dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_setting_partner_new"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <!-- 자주 묻는 질문 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_setting_question"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/my_eats_tv_question"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <!-- 고객 지원 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_setting_call"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/my_eats_tv_help_customer"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <!-- 설정 -->
        <LinearLayout
            android:id="@+id/my_eats_frag_setting_btn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_setting_setting"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/my_eats_tv_setting"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <!-- 공지사항 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_setting_inform"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/my_eats_tv_notice"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <!-- 약관 및 개인정보 처리방침 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_setting_partner"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/my_eats_tv_terms"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>